--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/images/boy.png
     - assets/images/boy_actions.png
     - assets/images/background.jpg
+    - assets/images/pgdesign.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
