--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ flutter:
     - assets/images/boy.png
     - assets/images/boy_actions.png
     - assets/images/background.jpg
+    - assets/images/background1.png
+    - assets/images/background2.png
+    - assets/images/background3.png
+    - assets/images/background4.png
     - assets/images/pgdesign.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
