--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
   assets:
     - assets/images/stickmen.png
     - assets/images/rats.png
+    - assets/images/cheese_knight.png
+    - assets/images/clockwork_rat.png
+    - assets/images/projectiles.png
     - assets/images/boy.png
     - assets/images/boy_actions.png
     - assets/images/background.jpg
